# django-boilerplate

./: .env  .env.docker  .env.sample  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  compose.yml  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: build-deploy.yml  scan-build.yml
app/: urls.py
app/migrations/: 0001_initial.py
django_boilerplate/: settings.py
tests/: __init__.py
