[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Ong Tze Wei <ong.tzewei@gmail.com>"]
readme = "README.md"
packages = [{include = "django_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
python-decouple = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
