[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.3",
    "django>=6.0.2",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in files
"app/admin.py" = ["F401"]
"app/models.py" = ["F401"]
"app/tests.py" = ["F401"]
"app/views.py" = ["F401"]
